# vanity

./: Cargo.toml  build.rs
kernels/: vanity.cu  vanity.metal
src/: lib.rs  main.rs
src/gpu/: metal.rs  mod.rs
