[package]
name = "vanity"
version = "0.2.0"
edition = "2021"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
license = "MIT OR Apache-2.0"
description = "A *bLaZinGlY fAsT* tool for grinding vanity addresses on Solana"
build = "build.rs"

[features]
default = []
cuda-gpu = ["cc"]
apple-gpu = ["metal"]

[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
bs58 = "0.5.1"
clap = { version = "4.5.7", features = ["derive"] }
ctrlc = "3.2"
fd_bs58 = "0.1.0"
indicatif = "0.17.0"
lazy_static = "1.4.0"
logfather = "0.2.6"
num-format = "0.4.4"
rand = "0.8.5"
rayon = "1.10.0"
sha2 = "0.10.8"
metal = { version = "0.30.0", features = ["mps"], optional = true }

[build-dependencies]
cc = { version = "1.0.98", optional = true }
